# hotel-system

./: README.md  pyproject.toml
hotel_backend/additional_services/: apps.py  models.py  urls.py  views.py
hotel_backend/additional_services/migrations/: 0001_initial.py  0002_service_description.py  0003_service_full_description_alter_service_description.py  0004_remove_service_full_description.py
hotel_backend/bookings/: models.py  urls.py  views.py
hotel_backend/bookings/migrations/: 0001_initial.py  0002_alter_booking_additional_services.py  0003_alter_booking_additional_services.py  0004_booking_is_confirmed.py  0005_booking_bill.py  0006_booking_guests_amount.py  0007_alter_booking_additional_services.py  0008_alter_booking_options.py
hotel_backend/homepage/: urls.py  views.py
hotel_backend/hotel_backend/: asgi.py  settings.py  urls.py  wsgi.py
hotel_backend/reviews/: models.py  urls.py  views.py
hotel_backend/reviews/migrations/: 0001_initial.py  0002_review_booking.py  0003_remove_review_booking.py
hotel_backend/rooms/: admin.py  models.py  urls.py  views.py
hotel_backend/rooms/migrations/: 0001_initial.py  0002_rename_facilities_room_amenities_alter_amenity_name.py  0003_alter_room_number.py  0004_layout_remove_room_layout_type_alter_room_number_and_more.py  0005_alter_layout_options_alter_layout_name_and_more.py  0006_alter_layoutimage_options_layout_min_price.py  0007_remove_layout_min_price.py  0008_layout_capacity_person.py  (+11 more)
hotel_backend/templates/: base.html
hotel_backend/users/: admin.py  forms.py  models.py  urls.py  views.py
(+39 files in other folders)
