[tool.poetry]
name = "hotel-system"
version = "0.1.0"
description = ""
authors = ["Artem Yurkov <yurkov.artyom21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.11"
pillow = "^10.3.0"
django-bootstrap-v5 = "^1.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
